// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test generateSmartLinksConfig Add config to 'ui5-deploy.yaml' project 1`] = `
Object {
  "services": Object {
    "ClientSideTargetResolution": Object {
      "adapter": Object {
        "config": Object {
          "inbounds": Object {
            "firstLink": Object {
              "action": "dummyAction",
              "resolutionResult": Object {},
              "semanticObject": "dummyObject",
              "signature": Object {
                "additionalParameters": "ignored",
              },
              "title": "dummyTitle",
            },
          },
        },
      },
    },
  },
}
`;

exports[`Test generateSmartLinksConfig Add config to 'ui5-deploy.yaml' project 2`] = `
"specVersion: '2.4'
metadata:
  name: 'fe_lrop_v4_odata_none'
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - path: /sap
            url: https://abc.ondemand.com
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.91.0 # The UI5 version, for instance, 1.78.1. Empty means latest version
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
    - name: fiori-tools-servestatic
      beforeMiddleware: fiori-tools-proxy
      configuration:
        paths:
          - path: /appconfig
            src: appconfig
            fallthrough: false
"
`;

exports[`Test generateSmartLinksConfig Add config to project with existing smartlinks config 1`] = `
Object {
  "services": Object {
    "ClientSideTargetResolution": Object {
      "adapter": Object {
        "config": Object {
          "inbounds": Object {
            "existingLink": Object {
              "action": "existingAction",
              "resolutionResult": Object {},
              "semanticObject": "existingObject",
              "signature": Object {
                "additionalParameters": "ignored",
              },
              "title": "existingTitle",
            },
            "firstLink": Object {
              "action": "dummyAction",
              "resolutionResult": Object {},
              "semanticObject": "dummyObject",
              "signature": Object {
                "additionalParameters": "ignored",
              },
              "title": "dummyTitle",
            },
          },
        },
      },
    },
  },
}
`;

exports[`Test generateSmartLinksConfig Add config to project with existing smartlinks config 2`] = `
"specVersion: '2.4'
metadata:
    name: 'fe_lrop_v4_odata_none'
type: application
server:
    customMiddleware:
        - name: fiori-tools-proxy
          afterMiddleware: compression
          configuration:
              ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
              backend:
                  - path: /sap
                    url: https://abc.ondemand.com
              ui5:
                  path:
                      - /resources
                      - /test-resources
                  url: https://ui5.sap.com
                  version: 1.91.0 # The UI5 version, for instance, 1.78.1. Empty means latest version
        - name: fiori-tools-appreload
          afterMiddleware: compression
          configuration:
              port: 35729
              path: webapp
        - name: fiori-tools-servestatic
          beforeMiddleware: fiori-tools-proxy
          configuration:
              paths:
                  - path: /appconfig
                    src: appconfig
                    fallthrough: false
"
`;
